Maven Build Test Verifier (#103)
* Maven Build Test Verifier

* remove System.out.println

* comment none existing file